--- a/src/components/HomepageFeatures/styles.module.css
+++ b/src/components/HomepageFeatures/styles.module.css
@@ -11,22 +11,32 @@
 }
 
 .details {
-  --docusaurus-details-decoration-color: var(--ifm-alert-border-color);
-    --docusaurus-details-transition: transform var(--ifm-transition-fast) ease;
-    margin: 0 0 var(--ifm-spacing-vertical);
-    border: 1px solid var(--ifm-alert-border-color);
+  text-decoration: var(--ifm-link-decoration);
   --ifm-code-background: var(--ifm-alert-background-color-highlight);
-    --ifm-link-color: var(--ifm-alert-foreground-color);
-    --ifm-link-hover-color: var(--ifm-alert-foreground-color);
-    --ifm-link-decoration: underline;
-    --ifm-tabs-color: var(--ifm-alert-foreground-color);
-    --ifm-tabs-color-active: var(--ifm-alert-foreground-color);
-    --ifm-tabs-color-active-border: var(--ifm-alert-border-color);
-    background-color: var(--ifm-alert-background-color);
-    border: var(--ifm-alert-border-width) solid var(--ifm-alert-border-color);
-    border-left-width: var(--ifm-alert-border-left-width);
-    border-radius: var(--ifm-alert-border-radius);
-    box-shadow: var(--ifm-alert-shadow);
-    color: var(--ifm-alert-foreground-color);
-    padding: var(--ifm-alert-padding-vertical) var(--ifm-alert-padding-horizontal);
+  --ifm-link-color: var(--ifm-color-primary);
+  --ifm-link-hover-color: var(--ifm-link-color);
+  background-color: var(--ifm-alert-background-color);
+  color: var(--ifm-font-color-base);
+  transition: color var(--ifm-transition-fast) var(--ifm-transition-timing-default);
+  --ifm-breadcrumb-item-background-active: var(--ifm-hover-overlay);
+  --ifm-menu-link-sublist-icon-filter: invert(100%) sepia(94%) saturate(17%) hue-rotate(223deg) brightness(104%) contrast(98%);
+  --ifm-link-decoration: none;
+  --ifm-link-hover-decoration: none;
+  font-size: 1rem;
+  --docusaurus-collapse-button-bg: transparent;
+  --docusaurus-collapse-button-bg-hover: rgb(0 0 0 / 10%);
+  --ifm-hover-overlay: rgba(0, 0, 0, 0.05);
+  --ifm-active-background: var(--ifm-hover-overlay);
+}
+
+.updates {
+  font-size: var (--ifm-h3-font-size);
+  font-weight: var (--ifm-font-weight-bold);
+  margin-bottom: 1rem !important;
+  display: block;
+  font-size: 1.17em;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
 }
